--- a/homework-3/package.json
+++ b/homework-3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw02-express-mongoose",
+  "name": "hw03-ts-express-mongoose",
   "version": "1.0.0",
   "license": "ISC",
   "main": "app.js",
